--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "uglify": "uglifyjs -o dist/js/scripts.min.js dist/js/scripts.js",
     "build:data": "mkdir -p dist/data/ && cp src/data/* dist/data/",
     "build:html": "mkdir -p dist && cp src/*.html dist/",
-    "build:css": "mkdir -p dist/css && npm run scss && cp src/css/* dist/css/",
+    "build:css": "mkdir -p dist/css && npm run scss && cp -r src/css/* dist/css/",
     "build:js": "npm run concat:js && browserify -t browserify-css ./app.js | uglifyjs > dist/js/bundle.js",
     "build:assets": "mkdir -p dist/assets && cp -r src/assets/ dist/assets/",
     "prebuild": "rm -rf ./dist",
@@ -37,7 +37,6 @@
     "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5",
     "onchange": "^6.0.0",
-    "scrollstory": "^1.1.0",
     "slick-carousel": "^1.8.1",
     "uglify-es": "^3.3.9"
   }
